Ajout de filtres pour lister et exporter les interventions, gestion des exceptions et mise à jour des réponses API