@@ -7,6 +7,7 @@ import com.workshop.vehicle_service.common.exception.ArchivageNonAutoriseExcepti
 import com.workshop.vehicle_service.common.exception.VehiculeInactifException;
 import com.workshop.vehicle_service.common.exception.VehiculeIntrouvableException;
 import com.workshop.vehicle_service.intervention.dto.InterventionCreateRequest;
+import com.workshop.vehicle_service.intervention.dto.InterventionListFilter;
 import com.workshop.vehicle_service.intervention.dto.InterventionResponse;
 import com.workshop.vehicle_service.intervention.dto.InterventionUpdateRequest;
 import com.workshop.vehicle_service.intervention.entity.Intervention;
@@ -31,11 +32,13 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -70,11 +73,11 @@ class InterventionServiceImplTest {
         when(vehiculeService.findActifById(1L)).thenReturn(vehicule);
         when(numeroGenerator.nextNumero()).thenReturn("INT-2026-000001");
         when(interventionRepository.save(any(Intervention.class))).thenAnswer(inv -> inv.getArgument(0));
-        when(interventionMapper.toResponse(any(Intervention.class))).thenReturn(
+        when(interventionMapper.toResponse(any(Intervention.class), anyBoolean())).thenReturn(
                 new InterventionResponse("INT-2026-000001", null, null, TypeIntervention.REPARATION,
                         "Bruit au freinage",
                         null, StatutIntervention.RECUE, PrioriteIntervention.NORMALE, null, LocalDateTime.now(), null,
-                        null, true));
+                        null, true, false));
 
         InterventionResponse response = interventionService.create(createRequest(1L));
 
@@ -113,6 +116,21 @@ class InterventionServiceImplTest {
         Vehicule vehicule = Vehicule.builder().id(1L).actif(true).build();
         when(vehiculeService.findActifById(1L)).thenReturn(vehicule);
         when(numeroGenerator.nextNumero()).thenReturn("INT-2026-000042");
+        when(interventionRepository.save(any(Intervention.class))).thenReturn(Intervention.builder()
+                .numero("INT-2026-000042")
+                .vehicule(vehicule)
+                .type(TypeIntervention.REPARATION)
+                .descriptionClient("Bruit au freinage")
+                .statut(StatutIntervention.RECUE)
+                .priorite(PrioriteIntervention.NORMALE)
+                .dateDepot(LocalDateTime.now())
+                .actif(true)
+                .build());
+        when(interventionMapper.toResponse(org.mockito.ArgumentMatchers.nullable(Intervention.class), anyBoolean()))
+                .thenReturn(
+                new InterventionResponse("INT-2026-000042", null, null, TypeIntervention.REPARATION,
+                        "Bruit au freinage", null, StatutIntervention.RECUE, PrioriteIntervention.NORMALE, null,
+                        LocalDateTime.now(), null, null, true, false));
 
         interventionService.create(createRequest(1L));
 
@@ -123,9 +141,9 @@ class InterventionServiceImplTest {
     void findByNumeroShouldReturnMappedResponseWhenFound() {
         Intervention intervention = Intervention.builder().numero("INT-2026-000123").actif(true).build();
         when(interventionRepository.findByNumero("INT-2026-000123")).thenReturn(Optional.of(intervention));
-        when(interventionMapper.toResponse(intervention)).thenReturn(
+        when(interventionMapper.toResponse(intervention, false)).thenReturn(
                 new InterventionResponse("INT-2026-000123", null, null, null, null, null, null, null, null, null,
-                        null, null, true));
+                        null, null, true, false));
 
         InterventionResponse response = interventionService.findByNumero("INT-2026-000123");
 
@@ -144,15 +162,17 @@ class InterventionServiceImplTest {
         Intervention intervention = Intervention.builder().numero("INT-2026-000001").actif(true).build();
         Pageable pageable = PageRequest.of(0, 20);
         Page<Intervention> page = new PageImpl<>(List.of(intervention), pageable, 1);
-        when(interventionRepository.findByActifTrue(pageable)).thenReturn(page);
-        when(interventionMapper.toResponse(intervention)).thenReturn(
+        when(interventionRepository.findAll(org.mockito.ArgumentMatchers.<Specification<Intervention>>any(),
+                any(Pageable.class))).thenReturn(page);
+        when(interventionMapper.toResponse(intervention, false)).thenReturn(
                 new InterventionResponse("INT-2026-000001", null, null, null, null, null, null, null, null, null,
-                        null, null, true));
+                        null, null, true, false));
 
-        Page<InterventionResponse> result = interventionService.list(pageable);
+        Page<InterventionResponse> result = interventionService.list(
+                new InterventionListFilter(null, null, null, null, null, null), pageable);
 
         assertEquals(1, result.getTotalElements());
-        assertEquals("INT-2026-000001", result.getContent().get(0).numero());
+        assertEquals("INT-2026-000001", result.getContent().getFirst().numero());
     }
 
     @Test
@@ -166,6 +186,16 @@ class InterventionServiceImplTest {
                 .build();
         when(interventionRepository.findByNumero("INT-2026-000001")).thenReturn(Optional.of(intervention));
         when(interventionRepository.save(any(Intervention.class))).thenAnswer(inv -> inv.getArgument(0));
+        when(interventionMapper.toResponse(any(Intervention.class), anyBoolean()))
+                .thenAnswer(inv -> new InterventionResponse(
+                        ((Intervention) inv.getArgument(0)).getNumero(), null, null,
+                        ((Intervention) inv.getArgument(0)).getType(),
+                        ((Intervention) inv.getArgument(0)).getDescriptionClient(), null,
+                        ((Intervention) inv.getArgument(0)).getStatut(),
+                        ((Intervention) inv.getArgument(0)).getPriorite(), null,
+                        ((Intervention) inv.getArgument(0)).getDateDepot(), null, null,
+                        ((Intervention) inv.getArgument(0)).isActif(),
+                        false));
 
         InterventionUpdateRequest request = new InterventionUpdateRequest(TypeIntervention.CONTROLE,
                 "Nouvelle description", PrioriteIntervention.HAUTE, LocalDateTime.now());
@@ -273,15 +303,15 @@ class InterventionServiceImplTest {
 
         when(interventionRepository.findByNumero("INT-2026-000001")).thenReturn(Optional.of(source));
         when(interventionRepository.findByVehiculeIdAndIdNotAndActifTrue(50L, 1L, pageable)).thenReturn(page);
-        when(interventionMapper.toResponse(other)).thenReturn(
+        when(interventionMapper.toResponse(other, false)).thenReturn(
                 new InterventionResponse("INT-2026-000002", null, null, null, null, null, null, null, null, null,
-                        null, null, true));
+                        null, null, true, false));
 
         Page<InterventionResponse> result = interventionService.findAutresInterventionsDuVehicule("INT-2026-000001",
                 pageable);
 
         assertEquals(1, result.getTotalElements());
-        assertEquals("INT-2026-000002", result.getContent().get(0).numero());
+        assertEquals("INT-2026-000002", result.getContent().getFirst().numero());
     }
 
     @Test
